--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,40 +1,76 @@
-*, *::before, *::after {
+*,
+*::before,
+*::after {
     box-sizing: border-box;
 }
 body {
     margin: 0;
     padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Poppins', Helvetica, sans-serif;
     background-color: rgb(255, 255, 255);
     color: rgb(0, 0, 0);
 }
 .card {
     width: 300px;
-    height: 400px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s;
     border-radius: 10%;
-    margin: auto;
-    padding: 20px;
+    margin: 15px;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
 }
 
 img {
     width: 100%;
-    border-radius: 10%;
+    border-radius: 10% 10% 0 0;
 }
 
 .container {
-    padding: 10px;
-    margin: auto;
+    padding-inline: 1rem;
+    flex-grow: 1;
+}
+
+h2 {
+    font-size: 1.5rem;
+    margin: 0.5rem 0;
+}
+
+p {
+    font-size: 1rem;
+    margin-bottom: 0.5rem;
 }
 
 .status {
     display: flex;
     justify-content: space-between;
-    position: relative;
+    font-size: 1.1rem;
+    padding: 16px 16px;
+}
+
+.green {
+    color: #2ecc71;
+    font-weight: bold;
+}
+
+.red {
+    color: #e74c3c;
+    font-weight: bold;
+}
+
+button {
+    width: 100%;
+    border: none;
+    padding: 1rem 0.5rem;
+    font-size: 1rem;
+    text-transform: uppercase;
+    font-weight: bold;
+    color: white;
+    background-color: #192a56;
 }
 
 .menu {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
 }
